--- a/index.html
+++ b/index.html
@@ -12,9 +12,38 @@
       href="./images/favicon-32x32.png"
     />
     <title>Frontend Mentor | Fylo data storage component</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
-    You’ve used 815 GB of your storage 185 GB Left 0 GB 1000 GB
+    <main>
+      <div class="top container">
+        <div class="top__logo">
+          <img src="./images/logo.svg" alt="logo" />
+        </div>
+        <div class="top__drive-icons">
+          <img src="./images/icon-document.svg" alt="document" />
+          <img src="./images/icon-folder.svg" alt="folder" />
+          <img src="./images/icon-upload.svg" alt="upload" />
+        </div>
+      </div>
+
+      <div class="bottom container">
+        <p>You’ve used <b>815 GB</b> of your storage <!--185 GB Left 0 GB 1000 GB --!></p>
+        <div class="bottom__meter">
+          <div class="bottom__meter-length"></div>
+          <p class="start">0 GB</p>
+          <p class="end">1000 GB</p>
+        </div>
+        <div class="bottom__left">
+          <span>185</span>
+          <span>GB LEFT</span>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
-
