--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <main>
-      <div class="top container">
+      <div class="top">
         <div class="top__logo">
           <img src="./images/logo.svg" alt="logo" />
         </div>
@@ -32,8 +32,8 @@
         </div>
       </div>
 
-      <div class="bottom container">
-        <p>You’ve used <b>815 GB</b> of your storage <!--185 GB Left 0 GB 1000 GB --!></p>
+      <div class="bottom">
+        <p>You’ve used <b>815 GB</b> of your storage</p>
         <div class="bottom__meter">
           <div class="bottom__meter-length"></div>
           <p class="start">0 GB</p>
